hphp/hack/test/typecheck/unsafe_cast/function_pointer.php.exp
ERROR: File "function_pointer.php", line 7, characters 15-34:
`HH\FIXME\UNSAFE_CAST` cannot be used as a function pointer (Naming[2105])
